environments/new-env/apps/app-bus/services/bus/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: bus
  namespace: new-env
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: bus
    weight: 100
  wildcardPolicy: None
